Add unit tests for game logic and store functionality
- Implement tests for game logic routing and level 1 logic handling.
- Create  tests for the gameInfo store, including code management, character calls, and feedback messages.
- Add tests for the roadmap store to validate step initialization, entry management, and reset functionality.
- Set up Vitest configuration for testing environment and coverage reporting.
- Mock necessary dependencies for isolated testing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@
 3. npm install -D tailwindcss postcss autoprefixer
 4. npx tailwindcss init -p (or manually create tailwind.config.js and postcss.config.js)
 5. npm install vue-router pinia vue-i18n
+
+testing: 
+npm install -D vitest @vue/test-utils @testing-library/vue @testing-library/jest-dom jsdom
