--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,4 @@
+
 name: Automated Tests
 
 on:
@@ -22,7 +23,8 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm ci --force || (rm -rf node_modules package-lock.json && npm install)
     
     - name: Run tests
       run: npm run test:run
