--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,3 @@
-
 name: Automated Tests
 
 on:
@@ -24,7 +23,11 @@ jobs:
     
     - name: Install dependencies
       run: |
-        npm ci --force || (rm -rf node_modules package-lock.json && npm install)
+        rm -rf node_modules package-lock.json
+        npm config set optional false
+        npm install
+        npm config set optional true
+        npm install @rollup/rollup-linux-x64-gnu --save-optional || true
     
     - name: Run tests
       run: npm run test:run
