--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "missionrdm": "file:",
@@ -27,6 +28,7 @@
     "@vitest/coverage-v8": "^3.1.4",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
