--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,60 +1,42 @@
-name: Deploy to GitHub Pages
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-# Add these permissions
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          # Remove npm cache temporarily
-          # cache: 'npm'
-          
-      - name: Clear npm cache
-        run: npm cache clean --force
-        
-      - name: Remove lock file and node_modules
-        run: |
-          rm -rf node_modules
-          rm -f package-lock.json
-          
-      - name: Install dependencies
-        run: npm install
-        
-      - name: Build
-        run: npm run build
-        
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-        
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+import { createRouter, createWebHistory } from 'vue-router'
+
+import Introduction from '@/pages/introduction/Introduction.vue'
+import Tutorial from '@/pages/introduction/Tutorial.vue'
+import StartScreen from '@/pages/StartScreen.vue'  // ✅ Import the Vue component, not the composable
+import Level1 from '@/pages/level1/Level1.vue' 
+import Level2 from '@/pages/level2/Level2.vue'
+
+const routes = [
+  {
+    path: '/',
+    name: 'StartScreen',
+    component: StartScreen  // ✅ Use the Vue component
+  },
+  {
+    path: '/introduction',
+    name: 'Introduction',
+    component: Introduction
+  },
+  {
+    path: '/tutorial',
+    name: 'Tutorial',
+    component: Tutorial
+  },
+  {
+    path: '/level/1',
+    name: 'Level1',
+    component: Level1
+  },
+  {
+    path: '/level/2',
+    name: 'Level2',
+    component: Level2
+  }
+]
+
+const router = createRouter({
+  history: createWebHistory(import.meta.env.BASE_URL),
+  routes
+})
+
+export default router
