--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,29 @@
-import { createRouter, createWebHistory } from 'vue-router'
+name: Deploy to GitHub Pages
 
-import Introduction from '@/pages/introduction/Introduction.vue'
-import Tutorial from '@/pages/introduction/Tutorial.vue'
-import StartScreen from '@/pages/StartScreen.vue'  // ✅ Import the Vue component, not the composable
-import Level1 from '@/pages/level1/Level1.vue' 
-import Level2 from '@/pages/level2/Level2.vue'
+on:
+  push:
+    branches: [main]
 
-const routes = [
-  {
-    path: '/',
-    name: 'StartScreen',
-    component: StartScreen  // ✅ Use the Vue component
-  },
-  {
-    path: '/introduction',
-    name: 'Introduction',
-    component: Introduction
-  },
-  {
-    path: '/tutorial',
-    name: 'Tutorial',
-    component: Tutorial
-  },
-  {
-    path: '/level/1',
-    name: 'Level1',
-    component: Level1
-  },
-  {
-    path: '/level/2',
-    name: 'Level2',
-    component: Level2
-  }
-]
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-const router = createRouter({
-  history: createWebHistory(import.meta.env.BASE_URL),
-  routes
-})
-
-export default router
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          
+      - run: npm install
+      - run: npm run build
+      
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
+          
+      - uses: actions/deploy-pages@v4
