--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches: [main]
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -20,10 +15,4 @@ jobs:
           node-version: 18
           
       - run: npm install
-      - run: npm run build
-      
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist
-          
-      - uses: actions/deploy-pages@v4
+      - run: npm run deploy
