Refactor deployment steps in deploy.yml to streamline dependency installation and remove unnecessary setup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,17 +7,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    container:
+      image: node:18-alpine
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          
-      - name: Clean install dependencies
-        run: |
-          rm -rf node_modules package-lock.json
-          npm cache clean --force
-          npm install --no-optional --legacy-peer-deps
-          
-      - run: npm run deploy
+      - run: npm install --legacy-peer-deps
+      - run: npm run build
+      - run: npx gh-pages -d dist
